PRJ (Reconstruction
    DEPENDS
        DataModel
        RootIO
)

add_subdirectory(BundleRecByChargeTool)
add_subdirectory(ConeMuonRecTool)
add_subdirectory(Deconvolution)
add_subdirectory(IntegralPmtRec)
add_subdirectory(LsqMuonRecTool)
add_subdirectory(OMILREC)
add_subdirectory(PmtRec)
add_subdirectory(PoolMuonRecTool)
add_subdirectory(PushAndPull)
add_subdirectory(QCtrRecAlg)
add_subdirectory(RecCdMuonAlg)
add_subdirectory(RecRelease)
add_subdirectory(RecSampleAlg)
add_subdirectory(RecTimeLikeAlg)
add_subdirectory(RecWpMuonAlg)
add_subdirectory(SmartRec)
add_subdirectory(SpmtMuonRecTool)
add_subdirectory(TemplateFitAlg)
add_subdirectory(TTTracking)
add_subdirectory(VertexFitAlg)
add_subdirectory(WaveFitAlg)
add_subdirectory(WPChargeClusterRec)
