include (PKG)
add_subdirectory(ElecBufferMgrSvc)
add_subdirectory(ElecDataStruct)
add_subdirectory(EvtMixingAlg)
add_subdirectory(GlobalTimeSvc)
add_subdirectory(PmtParamSvc)
add_subdirectory(PMTSimAlg)
add_subdirectory(PreTrgAlg)
add_subdirectory(RootRandomSvc)
add_subdirectory(UnpackingAlg)
add_subdirectory(WaveformSimAlg)

add_subdirectory(ReadOutAlg)
